Added a new module for UI test automation based on BDD, Cucumber

--- a/.gitignore
+++ b/.gitignore
@@ -26,15 +26,18 @@ cheaptickets-ui-tests/*.iml
 facebook-ui-tests/*.iml
 framework/*.iml
 service-api-tests/*.iml
+bdd-ui-tests/*.iml
 
 *.idea
 cheaptickets-ui-tests/*.idea
 facebook-ui-tests/*.idea
 framework/*.idea
 service-api-tests/*.idea
+bdd-ui-tests/*.idea
 
 target/*
 cheaptickets-ui-tests/target/*
 facebook-ui-tests/target/*
 framework/target/*
 service-api-tests/target/*
+bdd-ui-tests/target/*
