--- a/cheaptickets-ui-tests/pom.xml
+++ b/cheaptickets-ui-tests/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>parent</artifactId>
         <groupId>com.glb.bootcamp</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <version>0.1</version>
