--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,12 @@
         <module>facebook-ui-tests</module>
         <module>cheaptickets-ui-tests</module>
         <module>service-api-tests</module>
+        <module>bdd-ui-tests</module>
     </modules>
 
     <groupId>com.glb.bootcamp</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>pom</packaging>
 
     <properties>
