--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -26,6 +26,11 @@
             <version>3.10.0</version>
         </dependency>
         <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>5.0.4</version>
+        </dependency>
+        <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>2.1.0</version>
