--- a/mobile-tests/pom.xml
+++ b/mobile-tests/pom.xml
@@ -18,5 +18,20 @@
             <artifactId>framework</artifactId>
             <version>0.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 </project>
