--- a/facebook-ui-tests/src/test/resources/prd.properties
+++ b/facebook-ui-tests/src/test/resources/prd.properties
@@ -1,6 +1,6 @@
 base.url=http://www.facebook.com
 remote.server.url=http://localhost:4444/wd/hub
-remote.appium.url=
+remote.appium.url=http://localhost:4723/wd/hub
 implicit.wait=1
 explicit.wait=30
 polling.every=1
