--- a/mobile-tests/src/test/resources/android.capabilities.properties
+++ b/mobile-tests/src/test/resources/android.capabilities.properties
@@ -1,5 +1,6 @@
 platformName=android
 deviceName=Android Emulator
-appPackage=com.android.calculator2
-appActivity=.Calculator
+appPackage=com.android.contacts
+appActivity=com.android.contacts.activities.PeopleActivity
+#browserName=chrome
 automationName=appium
